GeanySendMail 0.4 (22. October 2008):

	* Adding support for creating a mail with recipients email
	  (Basic Patch by Timothy Boronczyk)
	* Added placeholder for file's basename (Idea by Timothy Boronczyk)
	* Added build support for Windows (not very well tested)
	* Updates at translation, documentation and buildsystem