@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(geanysendmail, 0.5svn)
+AM_INIT_AUTOMAKE(geanysendmail, 0.4.1)
 
 AM_CONFIG_HEADER(config.h)
 
